# OnePose

./: .gitignore  camera_pipeline.md  environment.yaml  feature_matching_object_detector.py  inference.py  inference_demo.py  parse_scanned_data.py  requirement.md  requirements.txt  requirements_no_version.txt  run-require.md  run_single.py  summary.md  train.py  video2img.py
configs/experiment/: object_detector.yaml  test_GATsSPG.yaml
configs/preprocess/: sfm_spp_spg_sample.yaml
onepose_ros_demo/: CMakeLists.txt  README-ONNX.md  README.md  environment.yml  package.xml  requirements-dev.txt  requirements.txt  ros_node_requirement.md  save_ros_bag_image.py  setup.py
onepose_ros_demo/config/: params.yaml
onepose_ros_demo/launch/: camera_topic.launch.py  local_file.launch.py
onepose_ros_demo/msg/: PoseEstimationResult.msg
onepose_ros_demo/onepose_ros_demo/: __init__.py  parse_scanned_data.py  pose_estimation_node.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/: README.md  __init__.py  __main__.py  benchmark.py  camera_pipeline.md  export_models.py  object_detector.py  onnx_models.py  pipeline.py  pipeline_online.py  pipeline_single.py  require.md  sfm_preprocess.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/sfm/: extract_features.py  generate_empty.py  match_features.py  pairs_from_poses.py  triangulation.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/sfm/postprocess/: feature_process.py  filter_points.py  filter_tkl.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/src/sfm/: generate_empty.py  match_features.py  triangulation.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/src/sfm/postprocess/: feature_process.py  filter_tkl.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/src/utils/: data_utils.py  vis_utils.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/src/utils/colmap/: database.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/utils/: vis_utils.py
onepose_ros_demo/onepose_ros_demo/onnx_demo/utils/colmap/: database.py
onepose_ros_demo/scripts/: run_onepose_local_demo.sh  setup.sh
onepose_ros_demo/test_data/: pose_estimation_result_pose_stamped_frames_001_100.csv  pose_estimation_result_pose_stamped_frames_001_100.json
scripts/: demo_pipeline.sh
src/datasets/: GATs_spg_dataset.py
src/local_feature_2D_detector/: local_feature_2D_detector.py
src/models/: GATsSPG_lightning_model.py
src/sfm/: extract_features.py  generate_empty.py  match_features.py  pairs_from_poses.py  triangulation.py
src/sfm/postprocess/: feature_process.py  filter_points.py  filter_tkl.py
src/tracker/: ba_tracker.py
src/utils/: vis_utils.py
test_onnx/onnx_demo/: README.md  __main__.py  benchmark.py  export_models.py  object_detector.py  parse_scanned_data.py  pipeline_online.py  pipeline_online.yml  pipeline_single.py  require.md  requirements.txt  run_sequence_flowchart.md
test_onnx/onnx_demo/benchmark_results/: benchmark_report.txt
test_onnx/onnx_demo/src/sfm/: pairs_from_poses.py  triangulation.py
test_onnx/onnx_demo/src/sfm/postprocess/: filter_points.py
test_onnx/onnx_demo/src/utils/: data_utils.py  vis_utils.py
